kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-api

spec:
  selector:
    matchLabels:
      app: portal-api

  replicas: 3

  template:
    metadata:
      labels:
        app: portal-api

    spec:
      containers:
        - name: portal-api
          image: apetitoebusinesssolutions.azurecr.io/meinapetito-portal-api:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "100m"

          ports:
            - containerPort: 80
