kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-api
spec:
  selector:
    app: portal-api
  ports:
  - port: 80
    targetPort: 80
